--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe's Personal Page</title>
+    <title>Your Name - Personal Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
-<body>
-    <h1>Welcome to John Doe's Personal Page</h1>
-    <p>This is a simple personal page hosted on GitHub Pages.</p>
+<body data-theme="light">
+    <header>
+        <button id="themeToggle">Toggle Dark Mode</button>
+    </header>
+
+    <section id="about">
+        <h1>About Me</h1>
+        <p>Your about content goes here...</p>
+    </section>
+
+    <section id="blog">
+        <h1>Blog</h1>
+        <p>Your blog content goes here...</p>
+    </section>
+
+    <section id="publications">
+        <h1>Publications</h1>
+        <p>Your publications content goes here...</p>
+    </section>
+
+    <section id="cv">
+        <h1>CV</h1>
+        <p>Your CV content goes here or link to a downloadable CV...</p>
+    </section>
+
+    <section id="links">
+        <h1>Links</h1>
+        <p>Your important links go here...</p>
+    </section>
+
+    <footer>
+        <p>© 2023 Your Name. Hosted on GitHub Pages.</p>
+    </footer>
 </body>
 </html>
