--- a/index.html
+++ b/index.html
@@ -42,3 +42,51 @@
     </footer>
 </body>
 </html>
+
+
+/* Default light theme styles */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #333;
+    background-color: #f4f4f4;
+}
+
+header, footer {
+    background-color: #333;
+    color: #f4f4f4;
+    padding: 10px;
+    text-align: center;
+}
+
+button {
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+section {
+    padding: 20px;
+    margin: 20px 0;
+}
+
+/* Dark theme styles */
+body[data-theme='dark'] {
+    background-color: #333;
+    color: #f4f4f4;
+}
+
+body[data-theme='dark'] header, body[data-theme='dark'] footer {
+    background-color: #f4f4f4;
+    color: #333;
+}
+
+document.getElementById('themeToggle').addEventListener('click', function() {
+    let currentTheme = document.body.getAttribute('data-theme');
+    if (currentTheme === 'light') {
+        document.body.setAttribute('data-theme', 'dark');
+    } else {
+        document.body.setAttribute('data-theme', 'light');
+    }
+});
+
