--- a/index.html
+++ b/index.html
@@ -2,78 +2,64 @@
 <html>
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-	<title>Jane Doe's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Your Name - AI in Healthcare</title>
 </head>
 
 <body>
-	<img id="profile_pic" src="assets/profile.jpg" alt="Jane Doe">
+    <img id="profile_pic" src="assets/profile.jpg" alt="Your Name">
 
-	<h1>Jane Doe</h1>
+    <h1>Your Name</h1>
 
-	<h3>
-	<a href="assets/resume.pdf">resume</a>
-	| <a href="https://scholar.google.com/">scholar</a>
-	| <a href="https://github.com/janedoe">github</a>
-	| <a href="mailto:jane.doe@example.com">email</a>
-	</h3>
+    <h3>
+        <a href="assets/resume.pdf">resume</a>
+        | <a href="https://scholar.google.com/">scholar</a>
+        | <a href="https://github.com/yourusername">github</a>
+        | <a href="mailto:your.email@example.com">email</a>
+    </h3>
 
-	<br>
+    <p>
+        Actively exploring research/team-based opportunities in the intersection of artificial intelligence and healthcare.
+    </p>
 
-	<p>
-	I am a graduate student in Applied Mathematics at the University of Imaginaria. I have spent the past year delving into mathematical modeling with Prof. John Smith at the Imaginaria Research Institute. Previously, I completed my undergraduate studies at the Academy of Science, where I collaborated with Profs. Anna Belle, Charles Xavier, and Linus Stone on various research projects. My interests lie in the intersection of mathematics and computer science, with a focus on algorithmic efficiency and data visualization.
-	</p>
+    <p>
+        Passionate about leveraging the transformative power of artificial intelligence and machine learning to enhance healthcare outcomes. With a strong interest in medical imaging, I believe in the potential of AI to revolutionize diagnostics, treatment planning, and patient care. My academic and research experiences have equipped me with a solid foundation in both computational methods and their real-world applications in health-tech.
+    </p>
 
-	<h2>news</h2>
+    <p>
+        I'm always open to discussing innovative ideas, potential collaborations, or opportunities in the AI-healthcare domain.
+    </p>
 
-	<table>
-	<tr>
-		<th>October 2023</th>
-		<td>Presented at the Global Math Conference</td>
-	</tr>
+    <ul>
+        <li>Researched deep learning methods for breast cancer classification with the Medical College of Wisconsin.</li>
+        <li>Optimized techniques for imbalanced datasets, achieving 100% cancer recall rate with limited data.</li>
+        <li>Published a conference paper and journal article based on my investigative findings.</li>
+        <li>Leveraged knowledge in Python, image preprocessing, deep learning, and basic histopathology.</li>
+    </ul>
 
-	<tr>
-		<th>August 2023</th>
-		<td>My new research paper was published in the Journal of Imaginary Mathematics</td>
-	</tr>
-	</table>
+    <h2>Publications</h2>
 
-	<h2>publications</h2>
+    <ul>
+        <li>
+            <p>
+                <b>Deep learning classification of deep ultraviolet fluorescence images toward intra-operative margin assessment in breast cancer</b><br>
+                <i>Frontiers for Oncology 2023</i>, 6/16/2023<br>
+                <a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2023.1179025/full">Read the full article</a>
+            </p>
+        </li>
+        <li>
+            <p>
+                <b>Deep Learning for Breast Cancer Classification of Deep Ultraviolet Fluorescence Images toward Intra-Operative Margin Assessment</b><br>
+                <i>2022 44th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC)</i>, 8/22/2022, Oral presentation<br>
+                <a href="https://ieeexplore.ieee.org/document/9871819">Conference proceedings</a>
+            </p>
+        </li>
+    </ul>
 
-	(&ast; denotes equal contribution)
-
-	<ol>
-	<li>
-		<b>Numerical Methods for Efficient Data Analysis</b><br>
-		Jane Doe&ast;, Anna Belle&ast;<br>
-		<i>Journal of Imaginary Mathematics, 2023</i><br>
-
-		<a href="assets/2023_jim_numericalmethods/paper.pdf">paper</a>
-		| <a href="https://arxiv.org/">arxiv</a>
-		| <a href="assets/2023_jim_numericalmethods/poster.pdf">poster</a>
-		| <a href="assets/2023_jim_numericalmethods/slides.pdf">slides</a>
-		| <a href="https://github.com/janedoe/numerical-methods">code</a>
-		| <a href="assets/2023_jim_numericalmethods/cite.txt">cite</a>
-	</li>
-
-	<li>
-		<b>Visualizing Multidimensional Data with Novel Algorithms</b><br>
-		Jane Doe, Charles Xavier<br>
-		<i>Proceedings of the Applied Mathematics Symposium, 2023</i><br>
-
-		<a href="assets/2023_ams_vmdna/paper.pdf">paper</a>
-		| <a href="https://arxiv.org/">arxiv</a>
-		| <a href="assets/2023_ams_vmdna/poster.pdf">poster</a>
-		| <a href="assets/2023_ams_vmdna/slides.pdf">slides</a>
-		| <a href="https://github.com/janedoe/vmdna">code</a>
-		| <a href="assets/2023_ams_vmdna/cite.txt">cite</a>
-	</li>
-	</ol>
-
-	<footer>
-		Made with <3 in HTML and CSS (<a href="https://github.com/janedoe/janedoe.github.io">code</a>).
-	<footer>
+    <footer>
+        Made with love in HTML and CSS (<a href="https://github.com/yourusername/yourusername.github.io">code</a>).
+    <footer>
 </body>
 
 </html>
