--- a/index.html
+++ b/index.html
@@ -8,38 +8,39 @@
 </head>
 
 <body>
-    <img id="profile_pic" src="assets/profile.jpg" alt="Your Name">
+    <img id="profile_pic" src="assets/profile.jpg" alt="Tyrell To">
 
-    <h1>Your Name</h1>
+    <h1>Tyrell To</h1>
 
     <h3>
         <a href="assets/resume.pdf">resume</a>
-        | <a href="https://scholar.google.com/">scholar</a>
-        | <a href="https://github.com/yourusername">github</a>
-        | <a href="mailto:your.email@example.com">email</a>
+<!--         | <a href="https://scholar.google.com/">scholar</a>
+        | <a href="https://github.com/tyrellto">github</a> -->
+        | <a href="mailto:tyrellto2000@gmail.com">email</a>
     </h3>
 
     <p>
-        Actively exploring research/team-based opportunities in the intersection of artificial intelligence and healthcare.
+        Actively exploring research/team-based opportunities in computer vision applications, and open to any other machine learning roles.
+
+        I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University.
+        In my grad and undergrad, I collaborated with Profs. Dong Hye Ye, Bing Yu on machine learning and deep learning applications for breast cancer research. 
     </p>
 
-    <p>
-        Passionate about leveraging the transformative power of artificial intelligence and machine learning to enhance healthcare outcomes. With a strong interest in medical imaging, I believe in the potential of AI to revolutionize diagnostics, treatment planning, and patient care. My academic and research experiences have equipped me with a solid foundation in both computational methods and their real-world applications in health-tech.
-    </p>
-
-    <p>
-        I'm always open to discussing innovative ideas, potential collaborations, or opportunities in the AI-healthcare domain.
-    </p>
-
+    <h2>News</h2>
     <ul>
-        <li>Researched deep learning methods for breast cancer classification with the Medical College of Wisconsin.</li>
-        <li>Optimized techniques for imbalanced datasets, achieving 100% cancer recall rate with limited data.</li>
-        <li>Published a conference paper and journal article based on my investigative findings.</li>
-        <li>Leveraged knowledge in Python, image preprocessing, deep learning, and basic histopathology.</li>
+        <li>
+            <p>
+                June 2023: Presented an oral presentation at the 2022 44th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC).
+            </p>
+        </li>
+        <li>
+            <p>
+                June 16, 2023: Published a journal in <i>Frontiers for Oncology 2023</i> on AI applications for healthcare.
+            </p>
+        </li>
     </ul>
 
     <h2>Publications</h2>
-
     <ul>
         <li>
             <p>
@@ -58,7 +59,7 @@
     </ul>
 
     <footer>
-        Made with love in HTML and CSS (<a href="https://github.com/yourusername/yourusername.github.io">code</a>).
+        Made with love in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto">code</a>).
     <footer>
 </body>
 
