--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
     <p>
         Actively exploring research/team-based opportunities in computer vision applications, and open to any other machine learning roles.
-
-        I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University.
+    </p>
+    
+    <p>
+        I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University. \n
         In my grad and undergrad, I collaborated with Profs. Dong Hye Ye, Bing Yu on machine learning and deep learning applications for breast cancer research. 
     </p>
 
