--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <h3>
         <a href="assets/resume.pdf">resume</a>
-<!--         | <a href="https://scholar.google.com/">scholar</a>
-        | <a href="https://github.com/tyrellto">github</a> -->
+<!--         | <a href="https://scholar.google.com/">scholar</a> -->
+        | <a href="https://github.com/tyrellto">github</a> 
         | <a href="mailto:tyrellto2000@gmail.com">email</a>
     </h3>
 
