--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     </h3>
 
     <p>
-        Actively exploring research/team-based opportunities in computer vision applications, and open to any other machine learning roles.
+        Actively exploring research/team-based opportunities in computer vision applications, and open to any other software engineering, machine learning roles.
     </p>
     
     <p>
-        I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University. \n
+        I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University.
+    </p>
+
+    <p>
         In my grad and undergrad, I collaborated with Profs. Dong Hye Ye, Bing Yu on machine learning and deep learning applications for breast cancer research. 
     </p>
 
@@ -61,7 +64,7 @@
     </ul>
 
     <footer>
-        Made with love in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto">code</a>).
+        Source code in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto">code</a>).
     <footer>
 </body>
 
