--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img id="profile_pic" src="assets/profile.jpg" alt="Tyrell To">
+    <img id="profile_pic" src="asset/github picture.png" alt="Tyrell To">
 
     <h1>Tyrell To</h1>
 
