--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
         </li>
     </ul>
 
+    <!-- Add your projects section -->
+    <h2>Projects</h2>
+    <div id="projects">
+        <div class="project">
+            <h3>Project Name 1</h3>
+            <p>Description of Project 1. This project focuses on... </p>
+            <p><b>Technologies:</b> Python, TensorFlow, OpenCV</p>
+            <p><a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a> | <a href="http://project-live-link.com" target="_blank">Live Demo</a></p>
+        </div>
+        
+        <div class="project">
+            <h3>Project Name 2</h3>
+            <p>Description of Project 2. This project is designed to... </p>
+            <p><b>Technologies:</b> React, Node.js, MongoDB</p>
+            <p><a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a> | <a href="http://project2-live-link.com" target="_blank">Live Demo</a></p>
+        </div>
+
+        <!-- Add more projects as needed -->
+    </div>
+
+
+
     <footer>
         Source code in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto">code</a>).
     <footer>
