--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <h3>
         <a href="assets/resume.pdf">resume</a>
+        <a href="https://www.linkedin.com/in/tyrellto/">linkedin</a></a>
 <!--         | <a href="https://scholar.google.com/">scholar</a> -->
         | <a href="https://github.com/tyrellto">github</a> 
         | <a href="mailto:tyrellto2000@gmail.com">email</a>
