--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <ul>
         <li>
             <p>
-                June 2022: Presented an oral presentation at the 2022 44th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC).
+                June 2022: Presented an oral presentation on my research at the 2022 44th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC).
             </p>
         </li>
         <li>
