--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <p>
                 <b>Deep learning classification of deep ultraviolet fluorescence images toward intra-operative margin assessment in breast cancer</b><br>
                 <i>Frontiers for Oncology 2023</i>, 6/16/2023<br>
-                <a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2023.1179025/full">Read the full article</a>
+                <a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2023.1179025/full">Read the full article</a> | <a https://github.com/tyrellto/breast-cancer-research/blob/main/README.md </a>
             </p>
         </li>
         <li>
             <p>
                 <b>Deep Learning for Breast Cancer Classification of Deep Ultraviolet Fluorescence Images toward Intra-Operative Margin Assessment</b><br>
                 <i>2022 44th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC)</i>, 8/22/2022, Oral presentation<br>
-                <a href="https://ieeexplore.ieee.org/document/9871819">Conference proceedings</a>
+                <a href="https://ieeexplore.ieee.org/document/9871819">Conference proceedings</a> | <a https://github.com/tyrellto/breast-cancer-research/blob/main/README.md </a>
             </p>
         </li>
     </ul>
@@ -66,25 +66,18 @@
     <!-- Add your projects section -->
     <h2>Projects</h2>
     <div id="projects">
-        <div class="project">
-            <h3>Project Name 1</h3>
-            <p>Description of Project 1. This project focuses on... </p>
-            <p><b>Technologies:</b> Python, TensorFlow, OpenCV</p>
-            <p><a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a> | <a href="http://project-live-link.com" target="_blank">Live Demo</a></p>
-        </div>
-        
-        <div class="project">
-            <h3>Project Name 2</h3>
-            <p>Description of Project 2. This project is designed to... </p>
-            <p><b>Technologies:</b> React, Node.js, MongoDB</p>
-            <p><a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a> | <a href="http://project2-live-link.com" target="_blank">Live Demo</a></p>
-        </div>
-
-        <!-- Add more projects as needed -->
+      <div class="project">
+        <h3>Basketball Free Throw Prediction</h3>
+        <p>This project leverages machine learning to predict the success of basketball free throws based on players' skeletal movements. It's an exploration into the application of data science in sports performance analysis.</p>
+        <p><a href="https://github.com/tyrellto/basketball-free-throw-prediction" target="_blank">View on GitHub</a></p>
+      </div>
+      <div class="project">
+        <h3>RUL Tool Prediction</h3>
+        <p>An analytical project focusing on predicting the Remaining Useful Life (RUL) of industrial tools. This predictive maintenance model aims to optimize operational efficiency and reduce unexpected downtime in manufacturing processes.</p>
+        <p><a href="https://github.com/tyrellto/RUL-tool-prediction" target="_blank">View on GitHub</a></p>
+      </div>
     </div>
-
-
-
+    
     <footer>
         Source code in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto">code</a>).
     <footer>
