--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <p>
                 <b>Deep learning classification of deep ultraviolet fluorescence images toward intra-operative margin assessment in breast cancer</b><br>
                 <i>Frontiers for Oncology 2023</i>, 6/16/2023<br>
-                <a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2023.1179025/full">Read the full article</a> | <a href="https://github.com/tyrellto/breast-cancer-research/blob/main/README.md">Research Repository</a>
+                <a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2023.1179025/full">Read the full article</a> | <a href="https://github.com/tyrellto/breast-cancer-research/blob/main">Research Repository</a>
             </p>
         </li>
         <li>
             <p>
                 <b>Deep Learning for Breast Cancer Classification of Deep Ultraviolet Fluorescence Images toward Intra-Operative Margin Assessment</b><br>
                 <i>2022 44th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC)</i>, 8/22/2022, Oral presentation<br>
-                <a href="https://ieeexplore.ieee.org/document/9871819">Conference proceedings</a> | <a href="https://github.com/tyrellto/breast-cancer-research/blob/main/README.md">Research Repository</a>
+                <a href="https://ieeexplore.ieee.org/document/9871819">Conference proceedings</a> | <a href="https://github.com/tyrellto/breast-cancer-research/blob/main">Research Repository</a>
             </p>
         </li>
     </ul>
