--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Tyrell To</h1>
 
     <h3>
-        <a href="assets/resume.pdf">resume</a>
+        <a href="asset/resume.pdf">resume</a>
         | <a href="https://www.linkedin.com/in/tyrellto">linkedin</a>
         | <a href="https://github.com/tyrellto">github</a> 
         | <a href="mailto:tyrellto2000@gmail.com">email</a>
