--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </h3>
 
     <p>
-        Actively exploring research/team-based opportunities in computer vision applications, and open to any other software engineering, machine learning roles.
+        <b>Actively exploring research/team-based opportunities in computer vision applications, and open to any other software engineering, machine learning roles.</b>
     </p>
     
     <p>
