--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <h2>Projects</h2>
     <div id="projects">
       <div class="project">
-        <h3>Basketball Free Throw Prediction</h3>
+        <h3><b>Basketball Free Throw Prediction</b></h3>
         <p>This project leverages machine learning to predict the success of basketball free throws based on players' skeletal movements. It's an exploration into the application of data science in sports performance analysis.</p>
         <p><a href="https://github.com/tyrellto/basketball-free-throw-prediction" target="_blank">View on GitHub</a></p>
       </div>
       <div class="project">
-        <h3>RUL Tool Prediction</h3>
+        <h3><b>RUL Tool Prediction</b></h3>
         <p>An analytical project focusing on predicting the Remaining Useful Life (RUL) of industrial tools. This predictive maintenance model aims to optimize operational efficiency and reduce unexpected downtime in manufacturing processes.</p>
         <p><a href="https://github.com/tyrellto/RUL-tool-prediction" target="_blank">View on GitHub</a></p>
       </div>
