--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <h3><b>RUL Tool Prediction</b></h3>
         <p>Ranked 1st of the class in the Foxconn Industrial AI Data challenge. I focused on predicting the Remaining Useful Life (RUL) of industrial tools, which was aimed to optimize operational efficiency and reduce unexpected downtime in manufacturing processes.</p>
         <p><a href="https://github.com/tyrellto/RUL-tool-prediction" target="_blank">View on GitHub</a></p>
+        <p align="center">
+         <img src="https://github.com/tyrellto/RUL-tool-prediction/assets/61175343/8bc7fab3-ea52-433f-82ac-a475074f785d" width="600" alt="RUL Sample"/>
+        </p>
       </div>
         
       <div class="project">
@@ -75,7 +78,7 @@
         <p>This project leverages machine learning to predict the success of basketball free throws based on players' skeletal movements. It's an exploration into the application of data science in sports performance analysis. I was the lead machine learning engineer that orchestrated data collection and model design.</p>
         <p><a href="https://github.com/tyrellto/basketball-free-throw-prediction" target="_blank">View on GitHub</a></p>
         <p align="center">
-          <img src="https://github.com/tyrellto/Giannis-Free-Throw-Prediction/assets/61175343/9e6c03d2-3c26-4ad8-8c60-9c6d0e012687" width="300" alt="MJ Freethrow"/>
+          <img src="https://github.com/tyrellto/Giannis-Free-Throw-Prediction/assets/61175343/9e6c03d2-3c26-4ad8-8c60-9c6d0e012687" width="400" alt="MJ Freethrow"/>
         </p>
       </div>
         
@@ -84,7 +87,7 @@
         <p>This was an attempt at the 2023 RSNA Abomdinal Trauma Detection Challenge on Kaggle, where I further developed my problem solving skills to solve a difficult multilabel classification problem. </p>
         <p><a href="https://github.com/tyrellto/ATD-challenge" target="_blank">View on GitHub</a></p>
         <p align="center">
-          <img src="https://prod-images-static.radiopaedia.org/images/14223502/b21b6127730a838fce624d1039b805_gallery.jpg" width="300" alt="CT Scan"/>
+          <img src="https://prod-images-static.radiopaedia.org/images/14223502/b21b6127730a838fce624d1039b805_gallery.jpg" width="400" alt="CT Scan"/>
         </p>
       </div>
     </div>
