--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University with Prof. <a href ="https://www.richard.povinelli.org/about"> Richard Povinelli </a> as my primary academic advisor.
     </p>
     <p>
-        In my grad and undergrad, I collaborated with Profs. <a href ="https://sites.google.com/view/donghyeye"> Dong Hye Ye </a>, <a href = "https://mcw.marquette.edu/biomedical-engineering/directory/bing-yu.php"> Bing Yu</a> on machine learning and deep learning applications for breast cancer research. 
+        In my grad and undergrad, I collaborated with Profs. <a href ="https://sites.google.com/view/donghyeye"> Dong Hye Ye </a>, <a href = "https://mcw.marquette.edu/biomedical-engineering/directory/bing-yu.php"> Bing Yu</a> on machine learning and deep learning applications for breast cancer research, specifically for assessment during surgery in a cost-efficient manner. 
     </p>
     <h2>News</h2>
     <ul>
