--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <img id="profile_pic" src="asset/github picture.png" alt="Tyrell To">
 
-    <h1>Tyrell To</h1>
+    <h1>Tyrell "Ty" To</h1>
 
     <h3>
         <a href="asset/resume.pdf">resume</a>
@@ -24,7 +24,7 @@
     </p>
     
     <p>
-        I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University with Prof. <a href ="https://www.richard.povinelli.org/about"> Richard Povinelli </a> as my primary academic advisor.
+        Hello my name is Tyrell, can call me Ty. I recently graduated from the 5 Year Accelerated Degree Program (4 BS + 1 MS) in Electrical and Computer Engineering at Marquette University with Prof. <a href ="https://www.richard.povinelli.org/about"> Richard Povinelli </a> as my primary academic advisor.
     </p>
     <p>
         In my grad and undergrad, I collaborated with Profs. <a href ="https://sites.google.com/view/donghyeye"> Dong Hye Ye </a>, <a href = "https://mcw.marquette.edu/biomedical-engineering/directory/bing-yu.php"> Bing Yu</a> on machine learning and deep learning applications for breast cancer research, specifically for assessment during surgery in a cost-efficient manner. 
@@ -93,7 +93,7 @@
     </div>
     
     <footer>
-        Source code in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto">code</a>).
+        Source code in HTML and CSS (<a href="https://github.com/tyrellto/tyrellto.github.io">code</a>).
     <footer>
 </body>
 
