--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         
       <div class="project">
         <h3><b>Abdominal Trauma Detection</b></h3>
-        <p>This was an attempt at the 2023 RSNA Abomdinal Trauma Detection Challenge on Kaggle, where I further developed my problem solving skills to solve a difficult multilabel classification problem. </p>
+        <p>This was an attempt at the 2023 RSNA Abdominal Trauma Detection Challenge on Kaggle, where I further developed my problem solving skills to solve a difficult multilabel classification problem. </p>
         <p><a href="https://github.com/tyrellto/ATD-challenge" target="_blank">View on GitHub</a></p>
         <p align="center">
           <img src="https://prod-images-static.radiopaedia.org/images/14223502/b21b6127730a838fce624d1039b805_gallery.jpg" width="400" alt="CT Scan"/>
